--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-g2plot-example-with-covid-api",
+  "name": "th-covid-data-virtualization-g2plot",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "@antv/g2plot": "^2.4.23",
     "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "antd": "^5.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
     "next": "13.1.1",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
