--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "antd": "^5.1.1",
+    "apexcharts": "^3.36.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "flowbite": "^1.5.5",
@@ -24,6 +25,7 @@
     "next": "13.1.1",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
