--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "typescript": "4.9.4"
